# effectful

./: .gitignore  CLAUDE.md  CONTRIBUTING.rst  Makefile  README.rst  a.out  implementation_plan.md  policy_iteration.py  poof.ml  pyproject.toml  pyrightconfig.json  repro_callable_field.py  ruff.toml  setup.cfg  setup.py  test-requirements.txt  test.ml  types.cmi  types.cmo  types.ml
.github/workflows/: lint.yml  publish_docs.yml  python-publish.yml  test.yml  test_docs.yml  test_llm.yml  test_notebooks.yml
docs/: requirements.txt
docs/source/: agent.py  agent_example.rst  beam.py  beam_search_example.rst  codeadapt.ipynb  codeadapt.py  codeadapt_agent.py  codeadapt_script.py  conf.py  counterfactual_example.py  effectful.rst  fold_lang_v1.py  index.rst  indexed_streams.py  introduction.ipynb  lambda_.py  lambda_example.rst  llm.ipynb  minipyro.py  minipyro.rst  minipyro_example.rst  module.rst  multi_agent_example.py  named_tensor_notation.ipynb  named_tensor_notation_i.ipynb  parametric_inversion_example.py  pocketflow-examples.ipynb  readme_example.py  requirements.txt  semantics.contextual.org  semantics.contextual.txt  semantics.txt  semi_ring.py  semi_ring_example.rst  thermometer.py  using_minipyro.py
effectful/: __init__.py
effectful/handlers/: indexed.py  jax.py  llm.py  minipyro.py  numbers.py  numpyro.py  operator.py  pyro.py  state.py  torch.py  torch_tensor.py
effectful/indexed/: distributions.py  func.py  handlers.py  internals.py  ops.py
effectful/internals/: base_impl.py  bootstrap.py  custom_operations.py  disassembler.py  disassembly.py  disjoint_set.py  genexpr.py  indexed_impls.py  meta_eval.py  mgu.py  numbers.py  pretty.py  product_n.py  prompts.py  reification.py  runtime.py  state.py  sugar.py  tensor_utils.py  torch.py  unification.py
effectful/ops/: core.py  dims.py  effects.py  function.py  handler.py  indexed.py  interpreter.py  llm.py  monoid.py  pyro.py  runner.py  semantics.py  simplifier.py  syntax.py  types.py
examples/: divorce.py  hmm.py  lifted_plates.py  partial_lifting.py  plated_einsum.py  policy_iteration.py  pomdb.py  vae.py
obs-examples/: thinking_elapsed.py  thinking_elapsed_multi.py
playground/: obshandler.py
scripts/: clean.sh  clean_notebooks.sh  lint.sh  lint_notebooks.sh  pyright.sh  test.sh  test_notebooks.sh
tests/: _llm_helpers.py  _monoid_helpers.py  conftest.py  dist_utils.py  test_async.py  test_dense.py  test_dist.py  test_effects.py  test_einsum.py  test_einsum_plated.py  test_expectation.py  test_flip.py  test_function.py  test_gensym.py  test_handler_llm_encoding_completion_integration.py  test_handlers_futures.py  test_handlers_indexed.py  test_handlers_jax.py  test_handlers_jax_dist.py  test_handlers_jax_monoid.py  test_handlers_jax_monoid_benchmark.py  test_handlers_llm.py  test_handlers_llm_agent.py  test_handlers_llm_anthropic.py  test_handlers_llm_doctest.py  test_handlers_llm_encoding.py  test_handlers_llm_encoding2.py  test_handlers_llm_evaluation.py  test_handlers_llm_futures.py  test_handlers_llm_governance.py  test_handlers_llm_provider.py  test_handlers_llm_provider_class_synthesis.py  test_handlers_llm_provider_image.py  test_handlers_llm_provider_synthesis.py  test_handlers_llm_template.py  test_handlers_llm_tool_calling_book.py  test_handlers_llm_tool_calling_poem.py  test_handlers_llm_type_checking.py  test_handlers_numbers.py  test_handlers_numpyro.py  (+57 more)
tests/fixtures/: tests_test_handlers_llm_provider.py__TestAgentCrossTemplateRecovery__test_agent_nested_template_call_inside_tool_preserves_tool_sequence.json  (+87 more)
weighted/: fold_lang_v1.py
weighted/handlers/: jax.py  optimization.py
weighted/ops/: distribution.py  (+5 more)
(+127 files in other folders)
